ready for deployment

--- a/Dropbox/PC/Desktop/osyro-meeting/.env
+++ b/Dropbox/PC/Desktop/osyro-meeting/.env
@@ -14,5 +14,5 @@ RECORDING_CHUNK_DURATION=5
 SPEAKER_CONFIDENCE_THRESHOLD=0.4
 
 # Model Settings
-WHISPER_MODEL_SIZE=base
+WHISPER_MODEL_SIZE=small
 SPEECHBRAIN_MODEL=speechbrain/spkrec-ecapa-voxceleb
